# dify-vismarttech

./: .dockerignore  .gitignore  README.md  backup_changes.patch  cloudflare-dify-quick-tunnel.cmd  pnpm-workspace.yaml  run-cloudflare-and-sync.ps1  sync-cloudflare-url.ps1  zalo_verifierUVwb3xw8BXbhkvbEjhSvU6_9x7g3jpuaDJa.html
.github/workflows/: autofix.yml  docker-build.yml  style.yml  tool-test-sdks.yaml  translate-i18n-claude.yml  trigger-i18n-sync.yml  vdb-tests-full.yml  vdb-tests.yml
api/: .env.example  app_factory.py  pyproject.toml
api/constants/: saas_billing_inventory.py
api/extensions/: ext_celery.py
api/libs/: token.py
api/models/: __init__.py  trigger.py
api/services/: billing_fork_usage.py  billing_service.py  feature_service.py  website_service.py
api/tasks/: omnichannel_tasks.py
billing_saas/: Dockerfile  pyproject.toml
billing_saas/app/: __init__.py  main.py  ninepay.py  ninepay_rest.py  store.py
billing_saas/tests/: test_ninepay.py  test_ninepay_rest.py  test_ninepay_store_apply.py
docker/: .dockerignore  .env.example  NINEPAY-INTEGRATION.md  README.md  RUN.md  build-web.cmd  build-web.ps1  docker-compose-template.yaml  docker-compose.override.yml  docker-compose.yaml  env.billing.activate.example  verify-stack.cmd
landing/: Dockerfile  README.md  next-env.d.ts  package.json  tsconfig.json
landing/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
landing/components/: preferences-context.tsx  product-mockup.tsx  site-shell.tsx  workflow-flow.tsx
web/: .env.example  Dockerfile  Dockerfile.dockerignore  env.ts
(+668 files in other folders)
